@@ -1,6 +1,6 @@
 /*
- *  Copyright 2020-2022 Google LLC
- *  Copyright 2020-2022 EPAM Systems, Inc
+ *  Copyright 2020-2025 Google LLC
+ *  Copyright 2020-2025 EPAM Systems, Inc
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -17,12 +17,9 @@
 
 package org.opengroup.osdu.storage.provider.gcp.web.repository;
 
-
 import static org.opengroup.osdu.core.osm.core.model.where.condition.And.and;
 import static org.opengroup.osdu.core.osm.core.model.where.predicate.Eq.eq;
-import static org.opengroup.osdu.storage.provider.gcp.web.repository.OsmRecordsMetadataRepository.KIND;
-import static org.opengroup.osdu.storage.provider.gcp.web.repository.OsmRecordsMetadataRepository.RECORD_KIND;
-import static org.opengroup.osdu.storage.provider.gcp.web.repository.OsmRecordsMetadataRepository.STATUS;
+import static org.opengroup.osdu.storage.provider.gcp.web.repository.OsmRecordsMetadataRepository.*;
 import static org.springframework.beans.factory.config.BeanDefinition.SCOPE_SINGLETON;
 
 import java.util.Collections;
@@ -30,16 +27,15 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.java.Log;
-import org.apache.commons.lang3.NotImplementedException;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.http.HttpStatus;
+import org.opengroup.osdu.core.common.model.http.AppException;
 import org.opengroup.osdu.core.common.model.http.CollaborationContext;
 import org.opengroup.osdu.core.common.model.storage.DatastoreQueryResult;
 import org.opengroup.osdu.core.common.model.storage.RecordMetadata;
 import org.opengroup.osdu.core.common.model.storage.RecordState;
 import org.opengroup.osdu.core.common.model.tenant.TenantInfo;
-
 import org.opengroup.osdu.core.osm.core.model.Destination;
 import org.opengroup.osdu.core.osm.core.model.Namespace;
 import org.opengroup.osdu.core.osm.core.model.order.OrderBy;
@@ -51,64 +47,191 @@ import org.opengroup.osdu.storage.model.RecordId;
 import org.opengroup.osdu.storage.model.RecordIdAndKind;
 import org.opengroup.osdu.storage.model.RecordInfoQueryResult;
 import org.opengroup.osdu.storage.provider.interfaces.IQueryRepository;
+import org.opengroup.osdu.storage.service.SchemaService;
 import org.springframework.context.annotation.Scope;
 import org.springframework.stereotype.Repository;
 
 @Repository
 @Scope(SCOPE_SINGLETON)
-@Log
+@Slf4j
 @RequiredArgsConstructor
 public class OsmQueryRepository implements IQueryRepository {
 
-    private final Context context;
-    private final TenantInfo tenantInfo;
+  private final Context context;
+  private final TenantInfo tenantInfo;
+  private final SchemaService schemaService;
 
-    @Override
-    public DatastoreQueryResult getAllKinds(Integer limit, String cursor) {
+  @Override
+  public DatastoreQueryResult getAllKinds(Integer limit, String cursor) {
+    GetQuery<RecordMetadata> q =
+        new GetQuery<>(
+            RecordMetadata.class,
+            getDestination(),
+            eq(STATUS, RecordState.active),
+            OrderBy.builder().addAsc(KIND).build());
 
-        GetQuery<RecordMetadata> q = new GetQuery<>(RecordMetadata.class, getDestination(),
-            eq(STATUS, RecordState.active), OrderBy.builder().addAsc(KIND).build());
-        Outcome<ViewResult> out = context.getViewResults(q, null, getLimitTuned(limit), Collections.singletonList(KIND), true, cursor).outcome();
-        List<String> kinds = out.getList().stream().map(e -> (String) e.get(KIND)).collect(Collectors.toList());
-        return new DatastoreQueryResult(out.getPointer(), kinds);
+    Outcome<ViewResult> out =
+        context
+            .getViewResults(
+                q, null, getLimitTuned(limit), Collections.singletonList(KIND), true, cursor)
+            .outcome();
+
+    List<String> kinds = out.getList().stream().map(e -> (String) e.get(KIND)).toList();
+    return new DatastoreQueryResult(out.getPointer(), kinds);
+  }
+
+  @Override
+  public DatastoreQueryResult getAllRecordIdsFromKind(String kind, Integer limit, String cursor, Optional<CollaborationContext> collaborationContext) {
+    GetQuery<RecordMetadata> q =
+        new GetQuery<>(
+            RecordMetadata.class,
+            getDestination(),
+            and(eq(KIND, kind), eq(STATUS, RecordState.active)));
+
+    Outcome<ViewResult> out =
+        context
+            .getViewResults(
+                q, null, getLimitTuned(limit), Collections.singletonList(ID), false, cursor)
+            .outcome();
+    List<String> result = out.getList().stream().map(e -> (String) e.get(ID)).toList();
+    String nextCursor = out.getPointer();
+    if(result.isEmpty()){
+      nextCursor = null;
     }
+    return new DatastoreQueryResult(nextCursor, result);
+  }
 
-    @Override
-    public DatastoreQueryResult getAllRecordIdsFromKind(String kind, Integer limit, String cursor, Optional<CollaborationContext> collaborationContext) {
+  @Override
+  public RecordInfoQueryResult<RecordIdAndKind> getAllRecordIdAndKind(Integer limit, String cursor) {
+    GetQuery<RecordMetadata> q =
+        new GetQuery<>(RecordMetadata.class, getDestination(), eq(STATUS, RecordState.active));
 
-        GetQuery<RecordMetadata> q = new GetQuery<>(RecordMetadata.class, getDestination(), and(eq(KIND, kind), eq(STATUS, RecordState.active)));
-        Outcome<ViewResult> out = context.getViewResults(q, null, getLimitTuned(limit), Collections.singletonList("id"), false, cursor).outcome();
-        return new DatastoreQueryResult(out.getPointer(), out.getList().stream().map(e -> (String) e.get("id")).collect(Collectors.toList()));
+    Outcome<ViewResult> outcome =
+        context
+            .getViewResults(
+                q, null, getLimitTuned(limit), Collections.singletonList(ID), false, cursor)
+            .outcome();
+
+    List<RecordIdAndKind> records =
+        outcome.getList().stream()
+            .map(
+                viewRecord -> {
+                  String id = (String) viewRecord.get(ID);
+                  String kind = (String) viewRecord.get(KIND);
+                  RecordIdAndKind result = new RecordIdAndKind();
+                  result.setId(id);
+                  result.setKind(kind);
+                  return result;
+                })
+            .toList();
+    String nextCursor = outcome.getPointer();
+    if(records.isEmpty()){
+      nextCursor = null;
     }
+    return new RecordInfoQueryResult<>(nextCursor, records);
+  }
 
-    @Override
-    public RecordInfoQueryResult<RecordIdAndKind> getAllRecordIdAndKind(Integer limit, String cursor) {
-        throw new NotImplementedException();
-    }
+  @Override
+  public RecordInfoQueryResult<RecordId> getAllRecordIdsFromKind(Integer limit, String cursor, String kind) {
+    GetQuery<RecordMetadata> q =
+        new GetQuery<>(
+            RecordMetadata.class,
+            getDestination(),
+            and(eq(KIND, kind), eq(STATUS, RecordState.active)));
 
-    @Override
-    public RecordInfoQueryResult<RecordId> getAllRecordIdsFromKind(Integer limit, String cursor, String kind) {
-        throw new  NotImplementedException();
-    }
+    Outcome<ViewResult> outcome =
+        context
+            .getViewResults(
+                q, null, getLimitTuned(limit), Collections.singletonList(ID), false, cursor)
+            .outcome();
 
-    @Override
-    public HashMap<String, Long> getActiveRecordsCount() {
-        throw new  NotImplementedException();
+    List<RecordId> records =
+        outcome.getList().stream()
+            .map(
+                viewRecord -> {
+                  String id = (String) viewRecord.get(ID);
+                  RecordId result = new RecordId();
+                  result.setId(id);
+                  return result;
+                })
+            .toList();
+    String nextCursor = outcome.getPointer();
+    if(records.isEmpty()){
+      nextCursor = null;
     }
+    return new RecordInfoQueryResult<>(nextCursor, records);
+  }
 
-    @Override
-    public Map<String, Long> getActiveRecordsCountForKinds(List<String> kinds) {
-        throw new  NotImplementedException();
-    }
+  @Override
+  public HashMap<String, Long> getActiveRecordsCount() {
+    HashMap<String, Long> kindCounts = new HashMap<>();
+    try {
+      List<String> kinds = getAllKinds(null, null).getResults();
+      for (String kind : kinds) {
+        long count = getActiveRecordCountForKind(kind);
+        if (count > 0) {
+          kindCounts.put(kind, count);
+        }
+      }
+      return kindCounts;
 
-    private int getLimitTuned(Integer limit) {
-        return limit == null ? PAGE_SIZE : (limit > 0 ? limit : PAGE_SIZE);
+    } catch (Exception e) {
+      throw new AppException(
+          HttpStatus.SC_INTERNAL_SERVER_ERROR,
+          "Error retrieving active records count",
+          e.getMessage(),
+          e);
     }
+  }
 
-    private Destination getDestination() {
-        return Destination.builder().partitionId(tenantInfo.getDataPartitionId())
-            .namespace(new Namespace(tenantInfo.getName()))
-            .kind(RECORD_KIND)
-            .build();
+  @Override
+  public Map<String, Long> getActiveRecordsCountForKinds(List<String> kinds) {
+    Map<String, Long> kindCounts = new HashMap<>();
+    for (String kind : kinds) {
+      try {
+        long count = getActiveRecordCountForKind(kind);
+        if (count != 0) {
+          kindCounts.put(kind, count);
+        }
+      } catch (Exception e) {
+        log.error("Error counting records for kind = %s : %s".formatted(kind, e.getMessage()), e);
+      }
     }
+    return kindCounts;
+  }
+
+  // TODO: The OSM driver currently doesn't support COUNT operations, although underlying databases
+  // do. Extend OSM logic to handle COUNT.
+  protected long getActiveRecordCountForKind(String kind) {
+    GetQuery<RecordMetadata> q =
+        new GetQuery<>(
+            RecordMetadata.class,
+            getDestination(),
+            and(eq(KIND, kind), eq(STATUS, RecordState.active)));
+
+    List<RecordMetadata> resultsAsList = context.getResultsAsList(q);
+    List<RecordId> records =
+        resultsAsList.stream()
+            .map(
+                recordMetadata -> {
+                  RecordId result = new RecordId();
+                  result.setId(recordMetadata.getId());
+                  return result;
+                })
+            .toList();
+
+    return records.size();
+  }
+
+  private int getLimitTuned(Integer limit) {
+    return (limit != null && limit > 0) ? limit : PAGE_SIZE;
+  }
+
+  protected Destination getDestination() {
+    return Destination.builder()
+        .partitionId(tenantInfo.getDataPartitionId())
+        .namespace(new Namespace(tenantInfo.getName()))
+        .kind(RECORD_KIND)
+        .build();
+  }
 }
